# Mirra

./: .gitignore  .gitmodules  DIAGNOSIS_VISUAL_ANALYSIS.md  README.md  README_FUSION_MATH.md  config.yaml  create_dummy_video.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_project.py
AMD_Frontend_2/: .stylelintrc.json  api.js  requirements.txt
AMD_Frontend_2/public/: index.html
AMD_Frontend_2/src/: App.jsx
AMD_Frontend_2/src/components/: HeroPage.jsx  UploadPage.jsx  ViewerPage.jsx  WhyPage.jsx
frontend/: App.jsx  package-lock.json  package.json
frontend/assets/coridoor/: Coridoor_camera_video.mov
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CrosshairCursor.jsx  HeroPage.jsx  PipelinePage.jsx  ResearchPage.jsx  StunningCursor.jsx  UploadPage.jsx  ViewerPage.jsx
outputs/2026-02-13/14-23-13/.hydra/: config.yaml  hydra.yaml
src/: App.jsx  clean_pointcloud.py  config.py  config_presets.py  depth_engine.py  fusion_engine.py  geometry_engine.py  geometry_engine_v2.py  heatmap_renderer.py  render_ply.py  semantic_engine.py  trajectory_renderer.py  video_utils.py
src/api/: server.py
src/components/: CrosshairCursor.jsx  HeroPage.jsx  PipelinePage.jsx  ResearchPage.jsx  StunningCursor.jsx  UploadPage.jsx  ViewerPage.jsx  WhyPage.jsx
tests/: test_fusion.py  test_geometry.py  test_semantic.py
tools/: fps_viewer.py  interactive_viewer.py
