[project]
name = "anything"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "huggingface-hub[torch]>=0.22",
    "hydra-core>=1.3.2",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "open3d>=0.17.0",
    "opencv-python>=4.8.0",
    "pyglet<2",
    "pyyaml>=6.0",
    "roma>=1.5.6",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.65.0",
    "trimesh>=4.11.2",
]
