[project]
name = "mirra"
version = "0.2.0"
description = "Reality-to-Simulation via 3D Semantic Reconstruction (VGGT + SAM 2 + TSDF)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "einops>=0.8.2",
    "fastapi>=0.134.0",
    "huggingface-hub[torch]>=0.22",
    "hydra-core>=1.3.2",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "open3d>=0.17.0",
    "opencv-python>=4.8.0",
    "pyglet<2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0",
    "roma>=1.5.6",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.65.0",
    "trimesh>=4.11.2",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
# VGGT is installed via 'git clone + pip install -e .' from its repo.
# SAM 2 is installed via 'git clone + pip install -e .' from its repo.
# These are documented here but managed by the engine setup functions.
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
